kubernetes/applications/ceph-storage/manifests/n8n/n8n-namespace.yml
# =====================================
# 0. Namespace
# =====================================
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
