kubernetes/applications/ceph-storage/manifests/n8n/n8n-deployment.yml

---

# =====================================
# 4. n8n Deployment
# =====================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        fsGroup: 1000
      dnsPolicy: ClusterFirst

      containers:
        - name: n8n
          image: n8nio/n8n:2.42.3
          imagePullPolicy: IfNotPresent
          args:
            - start
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 2Gi
          volumeMounts:
            - name: n8n-storage
              mountPath: /home/node/.n8n
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000

      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-data-rbd-pvc
